[package]
name = "cronrunner"
version = "2.1.0"
edition = "2021"
authors = ["Quentin Richert <noreply@richert.co>"]
description = "Run cron jobs manually."
homepage = "https://github.com/qrichert/cronrunner"
repository = "https://github.com/qrichert/cronrunner.git"
readme = "README.md"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
