[package]
name = "cronrunner"
version = "2.2.0"
edition = "2021"
authors = ["Quentin Richert <noreply@richert.co>"]
description = "Run cron jobs manually."
license = "GPL-3.0-or-later"
repository = "https://github.com/qrichert/cronrunner.git"
readme = "README.md"
keywords = ["cron", "crontab", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
