[package]
name = "cronrunner"
version = "2.12.0"
edition = "2024"
authors = ["Quentin Richert <noreply@richert.co>"]
description = "Run cron jobs manually."
license = "GPL-3.0-or-later OR MIT"
repository = "https://github.com/qrichert/cronrunner.git"
readme = "README.md"
keywords = ["cron", "crontab", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "cr"
path = "src/main.rs"

[profile.release]
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dependencies]
