[project]
name = "CronRunner"
version = "1.1.2"
authors = [
    { name="Quentin Richert", email="noreply@richert.co" },
]
description = "Run cron jobs manually."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
license = { file="LICENSE" }

[project.scripts]
cronrunner = "cronrunner.cronrunner:main"

[project.urls]
"Homepage" = "https://github.com/qrichert/cronrunner"

[tool.setuptools]
packages = ["cronrunner"]

[tool.coverage.report]
exclude_lines = [
    # Note: 'pass' should be included, use '...' for stubs.
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

[tool.isort]
profile = "black"

[tool.docformatter]
style = "sphinx"
black = true
wrap-summaries = 72
wrap-descriptions = 72
close-quotes-on-newline = true
